---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2021-01-17
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2021-01-17
  Changes:
    - flib 0.6.1-dependency set
    - default settings for reminder tasks are set to all off
  Bugfixes:
    - fixing crash when changing inventory while having tasks and remindor is hidden
    - fixing crash when creating a new game
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2021-01-17
  Changes:
    - Remindertask: show requestet amount as tooltip 
    - [tech] event handling allows more than one registration for any event
    - [tech] localisation service from flib implemented
    - Descriptions provided if available
    - Filter button for selector
  Bugfixes:
    - fixing crash when loading save file after settings changed
    - fixing only positive integers are allowed at select reminder count
    - fixing count in reminder task is wrong when recipe creates any other amount than one
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2021-01-15
  Changes:
    - Remindor frame management 
    - Remindor settings and automatic things
    - localisations
    - Close buttons for any gui (suggested by Ting_amm)
  Bugfixes:
    - fixing gui update on inventory/research changes
    - fixing crash when loading save file with Presentor and/or Remindor open
  Refactor:
    - [tech] using flib-gui-beta
    - [tech] ui-rework
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2021-01-05
  Changes:
    - new: Selector for remindor
  Refactor:
    - [tech] using more flib-gui
---------------------------------------------------------------------------------------------------